--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.0.0
 Flask==2.0.0
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
+Flask-JWT==0.3.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 itsdangerous==2.0.1
@@ -14,6 +15,7 @@ psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-editor==1.0.4
+PyJWT==1.4.2
 six==1.16.0
 SQLAlchemy==1.4.15
 Werkzeug==2.0.1
